# bootdev_ai_agent

./: .gitignore  agent  ai_agent.py  config.py  justfile  logger.py  main.py  pyproject.toml  test_get_file_content.py  test_get_files_info.py  test_logger.py  test_run_python_file.py  test_write_file.py
bootdev_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
calculator/: lorem.txt  main.py  tests.py
calculator/pkg/: morelorem.txt
data/: agent_logs.db
functions/: __init__.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
src/: ai_agent.py  cli_args.py  config.py  logger.py  main.py  tool_registry.py
src/calculator/: main.py  tests.py
src/calculator/pkg/: __init__.py  calculator.py
src/functions/: __init__.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
tests/: test_agent_functions.py  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
