[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootdev-ai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-mistralai>=1.1.2",
    "pydantic>=2.13.0",
]

[tool.setuptools]
packages = ["calculator", "calculator.pkg", "functions"]
